# job_parser

./: README.md  data.json  data_2.json  main.py  pyproject.toml
src/: class_get_vacancies.py  class_json_saver.py  class_vacancies.py  classes_to_filter_vacancies.py  utils.py
tests/: test.json  test_class_get_vacancies.py  test_class_json_saver.py  test_class_to_filter_vacancies.py  test_class_vacancies.py
